--- a/2)45Club/45Club.app/45Club.app/Views/Transport/Index.cshtml
+++ b/2)45Club/45Club.app/45Club.app/Views/Transport/Index.cshtml
@@ -39,6 +39,15 @@
             </div>
         </form>
     </div>
+    
+    <div class="col-md-2">
+      
+    </div>
+
+    <div class="col-md-2">
+        <img src="img/club45.jpg" alt="Girl in a jacket" width="150" height="150">
+    </div>
+
 </div>
 
 <table class="table">
