--- a/2)45Club/45Club.app/45Club.app/Views/Owner/Create.cshtml
+++ b/2)45Club/45Club.app/45Club.app/Views/Owner/Create.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group" hidden="true">
                 <label asp-for="TransportId" class="control-label"></label>
                 <input asp-for="TransportId" class="form-control" value="@Model.TransportId" />
                 <span asp-validation-for="TransportId" class="text-danger"></span>
