--- a/2)45Club/45Club.app/45Club.app/Views/Transport/Create.cshtml
+++ b/2)45Club/45Club.app/45Club.app/Views/Transport/Create.cshtml
@@ -20,9 +20,9 @@
                 <span asp-validation-for="View" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateOfIssue" class="control-label"></label>
-                <input asp-for="DateOfIssue" class="form-control" />
-                <span asp-validation-for="DateOfIssue" class="text-danger"></span>
+                <label asp-for="YearOfIssue" class="control-label"></label>
+                <input asp-for="YearOfIssue" class="form-control" />
+                <span asp-validation-for="YearOfIssue" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Model" class="control-label"></label>
