--- a/2)45Club/45Club.app/45Club.app/Views/Transport/Delete.cshtml
+++ b/2)45Club/45Club.app/45Club.app/Views/Transport/Delete.cshtml
@@ -19,10 +19,10 @@
             @Html.DisplayFor(model => model.View)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOfIssue)
+            @Html.DisplayNameFor(model => model.YearOfIssue)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateOfIssue)
+            @Html.DisplayFor(model => model.YearOfIssue)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Model)
