--- a/2)45Club/45Club.app/45Club.app/Views/Transport/Details.cshtml
+++ b/2)45Club/45Club.app/45Club.app/Views/Transport/Details.cshtml
@@ -16,10 +16,10 @@
             @Html.DisplayFor(model => model.View)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOfIssue)
+            @Html.DisplayNameFor(model => model.YearOfIssue)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateOfIssue)
+            @Html.DisplayFor(model => model.YearOfIssue)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Model)
@@ -49,6 +49,9 @@
             @Html.DisplayName("Дата ТО")
         </th>
         <th>
+            @Html.DisplayName("Пробег")
+        </th>
+        <th>
             @Html.DisplayName("Цена")
         </th>
         <th>
@@ -57,13 +60,16 @@
     </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model.Works)
+    @foreach (var item in Model.Works.OrderByDescending(w => w.Id))
     {
         var dataTarget = $"#exampleModal{item.Id}";
         var id = $"exampleModal{item.Id}";
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.DateOfWork)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Mileage)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
@@ -93,8 +99,9 @@
         </tr>
     }
     
-    
-    
+    </tbody>
+</table>
+
     <table class="table">
         <thead>
         <tr>
@@ -110,7 +117,7 @@
         </tr>
         </thead>
         <tbody>
-    @foreach (var item in Model.Owners)
+    @foreach (var item in Model.Owners.OrderByDescending(w => w.Id))
     {
         <tr>
             <td>
