--- a/2)45Club/45Club.app/45Club.app/Views/Transport/Edit.cshtml
+++ b/2)45Club/45Club.app/45Club.app/Views/Transport/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model _45Club.app.Models.Entities.Transport
+﻿@using _45Club.app.Models.Enums
+@model _45Club.app.Models.Entities.Transport
 
 @{
     ViewData["Title"] = "Edit";
@@ -16,13 +17,13 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="View" class="control-label"></label>
-                <select asp-for="View" class="form-control"></select>
+                <select asp-for="View" asp-items="Html.GetEnumSelectList<TransportViews>()" class="form-control"></select>
                 <span asp-validation-for="View" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateOfIssue" class="control-label"></label>
-                <input asp-for="DateOfIssue" class="form-control" />
-                <span asp-validation-for="DateOfIssue" class="text-danger"></span>
+                <label asp-for="YearOfIssue" class="control-label"></label>
+                <input asp-for="YearOfIssue" class="form-control" />
+                <span asp-validation-for="YearOfIssue" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Model" class="control-label"></label>
